fixed distorted scaling issue for work posts

--- a/css/home.css
+++ b/css/home.css
@@ -469,7 +469,7 @@ h4{
 
 .work-posts div a img{
 	max-width: 100%;
-	height: 240px;
+	max-height: 240px;
 }
 
 .work-posts div a div{
